<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.noushad.mealmanager.fragment.DashboardFragment">

    <!-- TODO: Update blank fragment layout -->

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.gms.ads.AdView
            android:id="@+id/banner_ad_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:adSize="BANNER"
            app:adUnitId="@string/banner_ad_unit_id"
            app:layout_constraintBottom_toTopOf="@+id/sign_in_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fab_check_button"
            app:layout_constraintVertical_bias="1.0" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_check_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:clickable="true"
            android:src="@drawable/ic_check"
            app:backgroundTint="#66bb6a"
            app:fabSize="normal"
            app:layout_constraintStart_toStartOf="@+id/fab_download_button"
            app:layout_constraintTop_toBottomOf="@+id/fab_download_button" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/check_last_update"
            android:textColor="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="@+id/fab_check_button"
            app:layout_constraintStart_toEndOf="@+id/fab_check_button"
            app:layout_constraintTop_toTopOf="@+id/fab_check_button" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_upload_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:src="@drawable/ic_upload"
            app:backgroundTint="@color/colorYellow"
            app:fabSize="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView5" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_download_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:clickable="true"
            android:src="@drawable/ic_download"
            app:fabSize="normal"
            app:layout_constraintStart_toStartOf="@+id/fab_upload_button"
            app:layout_constraintTop_toBottomOf="@+id/fab_upload_button" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="0dp"
            android:layout_height="220dp"
            android:src="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/advent_pro"
            android:text="@string/sync_your_data_with_our_free_servers"
            android:textColor="@color/colorBG"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/imageView5"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/advent_pro"
            android:text="@string/switching_dialog"
            android:textAlignment="viewStart"
            android:textColor="@color/cardview_light_background"
            app:layout_constraintEnd_toEndOf="@+id/textView10"
            app:layout_constraintStart_toStartOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginLeft="2dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/ic_upload"
            android:elevation="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView5"
            app:layout_constraintStart_toStartOf="@+id/textView11"
            app:layout_constraintTop_toBottomOf="@+id/textView11"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/upload"
            android:textColor="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="@+id/fab_upload_button"
            app:layout_constraintStart_toEndOf="@+id/fab_upload_button"
            app:layout_constraintTop_toTopOf="@+id/fab_upload_button" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/download"
            android:textColor="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="@+id/fab_download_button"
            app:layout_constraintStart_toEndOf="@+id/fab_download_button"
            app:layout_constraintTop_toTopOf="@+id/fab_download_button" />

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:fontFamily="@font/advent_pro"
            android:text="@string/sign_out"
            android:textColor="@color/colorBG"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </android.support.constraint.ConstraintLayout>
</FrameLayout>
